--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Abhishek Askar</title>
+    <title>Abhishek Aaskar</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico?v=2">
     <link rel="preconnect" href="https://fonts.googleapis.com">
